--- a/Habitaciones-Servicios.html
+++ b/Habitaciones-Servicios.html
@@ -1,57 +1,45 @@
-<main>
+<!-- 🏨 SECCIÓN HABITACIONES -->
+<section id="habitaciones">
+  <h2>Habitaciones</h2>
+  <p>
+    Nuestras habitaciones reflejan el espíritu del norte argentino:
+    materiales naturales, tonos cálidos y una vista inigualable a los viñedos y montañas.
+    Cada espacio fue diseñado para ofrecer calma, elegancia y conexión con la naturaleza.
+  </p>
 
-  <!-- 🏨 SECCIÓN HABITACIONES -->
-  <section id="habitaciones">
-    <h2>Habitaciones</h2>
-    <p>
-      Nuestras habitaciones reflejan el espíritu del norte argentino:
-      materiales naturales, tonos cálidos y una vista inigualable a los viñedos y montañas.
-      Cada espacio fue diseñado para ofrecer calma, elegancia y conexión con la naturaleza.
-    </p>
+  <!-- Imagen principal del hotel -->
+  <img src="img/AltosTorrontes.jpg" alt="Habitación principal del hotel con vista a los viñedos">
 
-    <img src="AltosTorrontes.jfif" alt="Habitación principal del hotel con vista a los viñedos">
+  <!-- Galería de habitaciones -->
+  <div class="gallery">
+    <img src="img/hotel_torre.jpg" alt="Vista exterior del hotel Altos del Torrontés">
+    <img src="img/hotel_2.jpg" alt="Habitación boutique con vista a los viñedos">
+    <img src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?auto=format&fit=crop&w=800&q=80" alt="Habitación triple moderna con decoración norteña">
+  </div>
+</section>
 
-    <div class="gallery">
-      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Suite doble con terraza privada">
-      <img src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?auto=format&fit=crop&w=800&q=80" alt="Habitación triple con diseño moderno">
-      <img src="https://images.unsplash.com/photo-1613977257363-707ba9348227?auto=format&fit=crop&w=800&q=80" alt="Vista desde la habitación al viñedo">
-    </div>
-  </section>
+<!-- 🌿 SECCIÓN SERVICIOS -->
+<section id="servicios" style="background-color:#F7F3EE;">
+  <h2>Servicios y Comodidades</h2>
+  <p>
+    En Altos del Torrontés ofrecemos una experiencia integral que combina confort, gastronomía y bienestar.
+    Todo está pensado para que tu estadía sea inolvidable.
+  </p>
 
-  <!-- 🏡 SECCIÓN HOTEL Y PISCINA -->
-  <section id="hotel-exterior">
-    <h2>Hotel y Piscina</h2>
-    <p>
-      Rodeado por los majestuosos Valles Calchaquíes, Altos del Torrontés ofrece una experiencia única de descanso
-      y conexión con la naturaleza. Su arquitectura combina materiales nobles con elegancia y confort, rodeado de
-      viñedos y con vistas privilegiadas a las montañas.
-    </p>
+  <ul style="list-style:none; padding:0; line-height:1.9;">
+    <li>🛏️ 15 habitaciones exclusivas con vista a los viñedos</li>
+    <li>🏊 Piscina infinity y climatizada</li>
+    <li>🍽️ Restaurante de autor con menú de pasos y maridaje</li>
+    <li>💆 Spa con vinoterapia y yoga entre viñedos</li>
+    <li>👨‍👩‍👧 Actividades y cuidado infantil</li>
+    <li>🚗 Estacionamiento privado</li>
+    <li>📶 Wi-Fi y servicio de lavandería</li>
+  </ul>
 
-    <img src="hotel_torre.jfif" alt="Vista exterior del hotel con piscina y viñedos">
-    <img src="hotel_2.jfif" alt="Ingreso al Hotel Altos del Torrontés con huéspedes disfrutando del entorno">
-
-    <div class="gallery">
-      <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=800&q=80" alt="Piscina exterior rodeada de montañas">
-      <img src="https://images.unsplash.com/photo-1590490360182-c33d57733427?auto=format&fit=crop&w=800&q=80" alt="Galería techada con mesas al aire libre">
-      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Solárium y áreas verdes">
-    </div>
-  </section>
-
-  <!-- 💆 SECCIÓN SPA Y BIENESTAR -->
-  <section id="spa">
-    <h2>Spa y Bienestar entre Viñedos</h2>
-    <p>
-      El Spa de Altos del Torrontés combina técnicas ancestrales de relajación con productos naturales de la región.
-      Ofrecemos tratamientos de vinoterapia, masajes con aceite de uva y sesiones de yoga al aire libre con vista a los cerros.
-    </p>
-
-    <img src="https://images.unsplash.com/photo-1600334129128-685c5582fd35?auto=format&fit=crop&w=900&q=80" alt="Spa con vista a los viñedos">
-
-    <div class="gallery">
-      <img src="https://images.unsplash.com/photo-1599058918144-8d57d2e1c5e2?auto=format&fit=crop&w=800&q=80" alt="Vinoterapia en spa natural">
-      <img src="https://images.unsplash.com/photo-1570211776045-b8bd0632c1d2?auto=format&fit=crop&w=800&q=80" alt="Masaje relajante con productos locales">
-      <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?auto=format&fit=crop&w=800&q=80" alt="Yoga entre viñedos al amanecer">
-    </div>
-  </section>
-
-</main>
+  <!-- Galería de servicios -->
+  <div class="gallery">
+    <img src="https://images.unsplash.com/photo-1526772662000-3f88f10405ff?auto=format&fit=crop&w=800&q=80" alt="Spa con vista a los viñedos">
+    <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Piscina al aire libre con vista a la montaña">
+    <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?auto=format&fit=crop&w=800&q=80" alt="Restaurante con menú gourmet regional">
+  </div>
+</section>
