Limpieza: elimino carpeta css/s y actualizo servicios.html

--- a/Servicios.html
+++ b/Servicios.html
@@ -1,73 +1,52 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Servicios – Altos del Torrontés</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+<!-- 🏨 SECCIÓN HABITACIONES -->
+<section id="habitaciones">
+  <h2>Habitaciones</h2>
+  <p>
+    En Altos del Torrontés, cada habitación combina el encanto del norte argentino con el confort moderno.
+    Los interiores están decorados con materiales nobles, tejidos artesanales y amplios ventanales que permiten
+    disfrutar del imponente paisaje de los Valles Calchaquíes.
+  </p>
 
-  <!-- ENCABEZADO -->
-  <header>
-    <h1>Altos del Torrontés</h1>
-    <p>Hotel Boutique · Wine & Spa</p>
-  </header>
+  <!-- Imagen principal -->
+  <img src="img/AltosTorrontes.jpg" alt="Habitación principal del hotel boutique Altos del Torrontés">
 
-  <!-- MENÚ -->
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="presentacion.html">Presentación</a>
-    <a href="ubicacion.html">Ubicación</a>
-    <a href="actividades.html">Actividades</a>
-    <a href="servicios.html" class="active">Servicios</a>
-    <a href="filosofia.html">Filosofía</a>
-    <a href="contacto.html">Contacto</a>
-  </nav>
+  <!-- Galería de habitaciones -->
+  <div class="gallery">
+    <img src="img/hotel_torre.jpg" alt="Habitación doble con terraza y vista a los viñedos">
+    <img src="img/hotel_2.jpg" alt="Suite rústica con decoración moderna y ventanales amplios">
+    <img src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?auto=format&fit=crop&w=800&q=80" alt="Habitación con estilo minimalista y vista a las montañas">
+  </div>
 
-  <!-- CONTENIDO PRINCIPAL -->
-  <section>
-    <h2>Servicios</h2>
-    <p>
-      En Altos del Torrontés, cada detalle está pensado para brindar confort y exclusividad.
-      Nuestras instalaciones combinan diseño regional, calidez y una atención personalizada
-      para que cada huésped viva una experiencia inolvidable.
-    </p>
-  </section>
+  <p>
+    Contamos con <strong>15 habitaciones exclusivas</strong>, cada una diseñada para ofrecer un ambiente cálido,
+    elegante y relajante. Todas disponen de baño privado, climatización, servicio de habitación y vistas únicas
+    a los viñedos o a las montañas.
+  </p>
 
-  <!-- GALERÍA DE SERVICIOS -->
-  <section style="background-color:#EBD3B3; text-align:center;">
-    <div class="gallery">
-      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Habitación doble elegante">
-      <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=800&q=80" alt="Habitación triple con vista al viñedo">
-      <img src="https://images.unsplash.com/photo-1582719478250-2f38c81a0f9a?auto=format&fit=crop&w=800&q=80" alt="Restaurante gourmet">
-      <img src="https://images.unsplash.com/photo-1598908314790-04dcbb19258d?auto=format&fit=crop&w=800&q=80" alt="Spa con piso de madera y velas">
-      <img src="https://images.unsplash.com/photo-1601972599720-361ff4ab31da?auto=format&fit=crop&w=800&q=80" alt="Piscina infinity con vista a las montañas">
-      <img src="https://images.unsplash.com/photo-1615874959474-d609b84f00ae?auto=format&fit=crop&w=800&q=80" alt="Sala de estar moderna y acogedora">
-    </div>
-  </section>
+  <p>
+    Disfrutá de un descanso auténtico con el aroma del vino y el silencio de los Valles Calchaquíes.  
+    Nuestro equipo se encargará de que cada detalle haga de tu estadía una experiencia inolvidable.
+  </p>
+</section>
 
-  <!-- DETALLE DE SERVICIOS -->
-  <section>
-    <h2>Comodidades destacadas</h2>
-    <ul>
-      <li>🛏️ 15 habitaciones exclusivas con terraza privada y vista a los viñedos.</li>
-      <li>💆‍♀️ Spa con vinoterapia, masajes y tratamientos de relajación.</li>
-      <li>🍽️ Restaurante de autor con menú degustación y maridaje de vinos locales.</li>
-      <li>🏊 Piscina infinity climatizada con vista a los Valles Calchaquíes.</li>
-      <li>🚗 Estacionamiento privado y servicio de transfer.</li>
-      <li>📶 Wi-Fi libre y servicio de lavandería.</li>
-      <li>👨‍👩‍👧 Actividades y cuidado infantil.</li>
-    </ul>
-  </section>
+<!-- 🌿 SECCIÓN SERVICIOS -->
+<section id="servicios">
+  <h2>Servicios del Hotel</h2>
+  <p>
+    En Altos del Torrontés buscamos que tu visita combine confort, bienestar y enoturismo.  
+    Nuestro hotel ofrece una variedad de servicios diseñados para que cada huésped disfrute
+    del equilibrio entre descanso, naturaleza y placer.
+  </p>
 
-  <!-- PIE DE PÁGINA -->
-  <footer>
-    <p>📍 Ruta Nacional 40 km 4349 – Animaná, Salta</p>
-    <p>📧 info@altosdeltorrontes.com | ☎ +54 387 400 0000</p>
-    <p><em>Proyecto académico – UNSAM – EEyN</em></p>
-  </footer>
+  <ul style="list-style: none; line-height: 1.8; padding: 0;">
+    <li>🛏️ Habitaciones con vista panorámica a los viñedos</li>
+    <li>🏊 Piscina climatizada estilo infinity</li>
+    <li>💆 Spa con vinoterapia, masajes y tratamientos naturales</li>
+    <li>🍽️ Restaurante gourmet con cocina regional de autor</li>
+    <li>🍷 Catas privadas y visitas guiadas a bodegas locales</li>
+    <li>🚗 Estacionamiento privado y servicio de transfer</li>
+    <li>📶 Wi-Fi libre en todas las áreas</li>
+  </ul>
 
-</body>
-</html>
+  <img src="https://images.unsplash.com/photo-1601918774946-25832a4be0d4?auto=format&fit=crop&w=800&q=80" alt="Spa del hotel con vista a los viñedos">
+</section>
