Limpio archivo nul y guardo cambios

--- a/Inicio.html
+++ b/Inicio.html
@@ -1,62 +1,61 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Altos del Torrontés – Hotel Boutique · Wine & Spa</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+<!-- 🏨 SECCIÓN HABITACIONES -->
+<section id="habitaciones">
+  <h2>Habitaciones</h2>
+  <p>
+    En Altos del Torrontés, cada habitación combina el encanto del norte argentino con el confort moderno.
+    Los interiores están decorados con materiales nobles, tejidos artesanales y amplios ventanales que permiten
+    disfrutar del imponente paisaje de los Valles Calchaquíes.
+  </p>
 
-  <header class="hero" style="background:url('img/camino-montanas.jpg') center/cover no-repeat;">
-    <div class="hero-content">
-      <h1>Altos del Torrontés</h1>
-      <p>Hotel Boutique · Wine & Spa</p>
-      <a href="presentacion.html" class="cta-btn">Descubrí la experiencia</a>
-    </div>
-  </header>
+  <!-- Imagen principal -->
+  <img src="img/AltosTorrontes.jpg" alt="Habitación principal del hotel boutique Altos del Torrontés">
 
-  <nav>
-    <a href="index.html" class="active">Inicio</a>
-    <a href="presentacion.html">Presentación</a>
-    <a href="ubicacion.html">Ubicación</a>
-    <a href="actividades.html">Actividades</a>
-    <a href="servicios.html">Servicios</a>
-    <a href="filosofia.html">Filosofía</a>
-    <a href="contacto.html">Contacto</a>
-  </nav>
+  <!-- Galería de habitaciones -->
+  <div class="gallery">
+    <img src="img/hotel_torre.jpg" alt="Habitación doble con terraza y vista a los viñedos">
+    <img src="img/hotel_2.jpg" alt="Suite rústica con decoración moderna y ventanales amplios">
+    <img src="https://images.unsplash.com/photo-1611892440504-42a792e24d32?auto=format&fit=crop&w=800&q=80" alt="Habitación con estilo minimalista y vista a las montañas">
+  </div>
 
-  <section>
-    <h2>Bienvenidos a los Valles Calchaquíes</h2>
-    <p>
-      Entre montañas y viñedos, Altos del Torrontés ofrece una experiencia que combina lujo, descanso y naturaleza.  
-      En el corazón de Animaná, Salta, nuestro hotel boutique invita a desconectarse del mundo y reconectarse con lo esencial: el silencio, el vino y la tierra.
-    </p>
-  </section>
+  <p>
+    Contamos con <strong>15 habitaciones exclusivas</strong>, cada una diseñada para ofrecer un ambiente cálido,
+    elegante y relajante. Todas disponen de baño privado, climatización, servicio de habitación y vistas únicas
+    a los viñedos o a las montañas.
+  </p>
 
-  <section style="background-color:#EBD3B3; text-align:center;">
-    <div class="gallery">
-      <img src="img/brindis-vinedo.jpg" alt="Brindis entre viñedos">
-      <img src="img/vinedos-salta.jpg" alt="Viñedos de altura en Salta">
-      <img src="img/mesa-vino-uvas.jpg" alt="Mesa de degustación de vinos">
-    </div>
-  </section>
+  <p>
+    Disfrutá de un descanso auténtico con el aroma del vino y el silencio de los Valles Calchaquíes.  
+    Nuestro equipo se encargará de que cada detalle haga de tu estadía una experiencia inolvidable.
+  </p>
+</section>
 
-  <section>
-    <h2>Vivir el norte argentino con estilo</h2>
-    <p>
-      Inspirado en la nobleza del vino Torrontés, nuestro hotel ofrece experiencias personalizadas:  
-      catas privadas, caminatas entre viñedos, sesiones de spa y gastronomía gourmet con maridajes únicos.  
-      Cada detalle fue pensado para reflejar la identidad de Salta, con el confort de la hotelería boutique.
-    </p>
-  </section>
+<!-- 🌿 SECCIÓN SERVICIOS -->
+<section id="servicios" style="background-color:#EBD3B3;">
+  <h2>Servicios del Hotel</h2>
+  <p>
+    En Altos del Torrontés buscamos que tu visita combine confort, bienestar y enoturismo.  
+    Nuestro hotel ofrece una variedad de servicios diseñados para que cada huésped disfrute
+    del equilibrio entre descanso, naturaleza y placer.
+  </p>
 
-  <footer>
-    <p>📍 Ruta Nacional 40 km 4349 – Animaná, Salta</p>
-    <p>📧 info@altosdeltorrontes.com | ☎ +54 387 400 0000</p>
-    <p><em>Proyecto académico – UNSAM – EEyN</em></p>
-  </footer>
+  <ul class="servicios-lista">
+    <li>🛏️ Habitaciones con vista panorámica a los viñedos</li>
+    <li>🏊 Piscina climatizada estilo infinity</li>
+    <li>💆 Spa con vinoterapia, masajes y tratamientos naturales</li>
+    <li>🍽️ Restaurante gourmet con cocina regional de autor</li>
+    <li>🍷 Catas privadas y visitas guiadas a bodegas locales</li>
+    <li>🚗 Estacionamiento privado y servicio de transfer</li>
+    <li>📶 Wi-Fi libre en todas las áreas</li>
+  </ul>
 
-</body>
-</html>
+  <div class="gallery">
+    <img src="https://images.unsplash.com/photo-1601918774946-25832a4be0d4?auto=format&fit=crop&w=800&q=80" alt="Spa del hotel con vista a los viñedos">
+    <img src="https://images.unsplash.com/photo-1616486338812-3dadae4b4ace?auto=format&fit=crop&w=800&q=80" alt="Piscina infinity con vista a los cerros">
+    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Restaurante gourmet del hotel">
+  </div>
+
+  <p>
+    Cada espacio fue pensado para brindar armonía y conexión con la naturaleza.
+    Viví una experiencia única entre vinos, montañas y el confort de nuestro hotel boutique.
+  </p>
+</section>
