--- a/actividades.html
+++ b/actividades.html
@@ -4,54 +4,127 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Altos del Torrontés – Actividades</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?v=28">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+
   <style>
+    body {
+      background-color: #F7F3EE;
+      color: #3A2E2B;
+      font-family: 'Lato', sans-serif;
+      margin: 0;
+      scroll-behavior: smooth;
+    }
+
+    header {
+      background: url('https://images.unsplash.com/photo-1506377295352-e3154d43ea9e?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat;
+      color: white;
+      text-align: center;
+      padding: 120px 20px;
+      position: relative;
+    }
+
+    header::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.4);
+    }
+
+    header h1, header p {
+      position: relative;
+      z-index: 1;
+    }
+
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: clamp(2.2em, 5vw, 3em);
+      margin-bottom: 10px;
+      text-shadow: 0 3px 10px rgba(0,0,0,0.5);
+    }
+
+    header p {
+      font-size: 1.3em;
+    }
+
+    /* ======= ACTIVIDADES ======= */
+    main {
+      padding: 60px 10%;
+    }
+
+    h2 {
+      color: #8C1C13;
+      font-family: 'Playfair Display', serif;
+      text-align: center;
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+
+    main p {
+      max-width: 900px;
+      margin: 0 auto 40px;
+      text-align: center;
+      line-height: 1.7;
+      font-size: 1.1em;
+    }
+
     .activity {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      margin-bottom: 60px;
-      gap: 20px;
+      margin-bottom: 70px;
+      gap: 30px;
     }
+
     .activity img {
       width: 100%;
       max-width: 500px;
-      border-radius: 12px;
+      border-radius: 14px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.25);
       transition: transform 0.3s ease;
     }
+
     .activity img:hover {
       transform: scale(1.05);
     }
+
     .activity-text {
       flex: 1;
-      text-align: left;
       font-size: 1.1em;
       line-height: 1.7;
+      text-align: left;
     }
-    .icon {
-      font-size: 1.5em;
+
+    .activity-text h3 {
       color: #8C1C13;
-      margin-right: 8px;
+      font-family: 'Playfair Display', serif;
+      margin-bottom: 10px;
     }
+
     @media (max-width: 768px) {
       .activity {
-        flex-direction: column;
+        flex-direction: column !important;
         text-align: center;
       }
+
       .activity-text {
         text-align: center;
       }
+    }
+
+    footer {
+      background: #8C1C13;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+      margin-top: 60px;
     }
   </style>
 </head>
 
 <body>
-  <header>
-    <h1>Actividades & Experiencias</h1>
-    <p>Vivir los Valles Calchaquíes desde todos los sentidos</p>
-  </header>
 
+  <!-- ======= MENÚ ======= -->
   <nav>
     <a href="index.html">Inicio</a>
     <a href="presentacion.html">Presentación</a>
@@ -62,18 +135,25 @@
     <a href="contacto.html">Contacto</a>
   </nav>
 
+  <!-- ======= CABECERA ======= -->
+  <header>
+    <h1>Actividades & Experiencias</h1>
+    <p>Vivir los Valles Calchaquíes desde todos los sentidos</p>
+  </header>
+
+  <!-- ======= CONTENIDO ======= -->
   <main>
     <section>
       <h2>Conectá con la naturaleza, la cultura y el vino</h2>
       <p>
-        En Altos del Torrontés te invitamos a vivir experiencias únicas entre viñedos, montañas y tradiciones salteñas.
+        En <strong>Altos del Torrontés</strong> te invitamos a vivir experiencias únicas entre viñedos, montañas y tradiciones salteñas.  
         Cada actividad fue pensada para que disfrutes del entorno, la gastronomía y la serenidad del lugar.
       </p>
     </section>
 
     <!-- CATA DE VINOS -->
     <section class="activity">
-      <img src="https://images.unsplash.com/photo-1618568949774-15d741a57a20" alt="Cata de vinos en bodega boutique">
+      <img src="https://images.unsplash.com/photo-1618568949774-15d741a57a20?auto=format&fit=crop&w=800&q=80" alt="Cata de vinos en bodega boutique">
       <div class="activity-text">
         <h3>🍷 Cata de vinos guiada</h3>
         <p>Descubrí los secretos del vino de altura con nuestros sommeliers. Aprendé sobre aromas, notas y maridajes
@@ -83,7 +163,7 @@
 
     <!-- CABALGATAS -->
     <section class="activity" style="flex-direction: row-reverse;">
-      <img src="https://images.unsplash.com/photo-1561136594-7f68413baa07" alt="Cabalgatas entre viñedos y montañas">
+      <img src="img/cabalgata.png" alt="Cabalgatas entre viñedos y montañas">
       <div class="activity-text">
         <h3>🐎 Cabalgatas entre viñedos</h3>
         <p>Explorá los senderos de los Valles Calchaquíes a caballo, acompañado por guías locales que te mostrarán
@@ -93,7 +173,7 @@
 
     <!-- SPA ENTRE VIÑEDOS -->
     <section class="activity">
-      <img src="https://images.unsplash.com/photo-1618220179428-22790b461013" alt="Spa entre viñedos">
+      <img src="img/spa.png" alt="Spa entre viñedos">
       <div class="activity-text">
         <h3>💆‍♀️ Spa & Vinoterapia</h3>
         <p>Relajate en nuestro spa inmerso en la naturaleza. Tratamientos con uvas y aceites locales, rodeado de
@@ -103,7 +183,7 @@
 
     <!-- GASTRONOMÍA -->
     <section class="activity" style="flex-direction: row-reverse;">
-      <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092" alt="Gastronomía regional gourmet">
+      <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=800&q=80" alt="Gastronomía regional gourmet">
       <div class="activity-text">
         <h3>🍽️ Cocina Regional</h3>
         <p>Saboreá la gastronomía del norte argentino con un menú de pasos elaborado por chefs locales.
@@ -113,7 +193,7 @@
 
     <!-- CAMINATAS -->
     <section class="activity">
-      <img src="https://images.unsplash.com/photo-1600014586932-bf93a5393cd4" alt="Senderismo por los valles">
+      <img src="https://images.unsplash.com/photo-1600014586932-bf93a5393cd4?auto=format&fit=crop&w=800&q=80" alt="Senderismo por los valles">
       <div class="activity-text">
         <h3>🥾 Senderismo en los cerros</h3>
         <p>Recorré los caminos ancestrales entre montañas, con vistas únicas y aire puro.
@@ -122,10 +202,12 @@
     </section>
   </main>
 
+  <!-- ======= PIE DE PÁGINA ======= -->
   <footer>
     <p>📍 Ruta Nacional 40 km 4349 – Animaná, Salta</p>
     <p>📧 info@altosdeltorrontes.com | ☎ +54 387 400 0000</p>
-    <p><em>Proyecto académico – UNSAM – EEyN</em></p>
+    <p><em>© 2025 Altos del Torrontés – Todos los derechos reservados</em></p>
   </footer>
+
 </body>
 </html>
